--- a/static/assets/css/style-journal.css
+++ b/static/assets/css/style-journal.css
@@ -901,6 +901,8 @@ code {
   background-color: #463d3daf;
   padding: 5px;
   font-size: 105%;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 img {
